# dependent-map

./: .boring  .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  dependent-map.cabal  dependent-maps.cabal  release.nix
.github/workflows/: haskell-ci.yml
src/Data/Dependent/: Map.hs
src/Data/Dependent/Map/: Internal.hs  Internal2.hs  Lens.hs  Merge.hs  NonEmpty.hs  PtrEquality.hs  Typeable.hs
src/Data/Dependent/Map/NonEmpty/: Lens.hs
