name:                   dependent-map
version:                0.4.0.1
stability:              provisional

cabal-version:          >= 1.8
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             Obsidian Systems, LLC <maintainer@obsidian.systems>
license:                OtherLicense
license-file:           LICENSE
homepage:               https://github.com/obsidiansystems/dependent-map

category:               Data, Dependent Types
synopsis:               Dependent finite maps (partial dependent products)
description:            Provides a type called @DMap@ which generalizes
                        @Data.Map.Map@, allowing keys to specify the type
                        of value that can be associated with them.

extra-source-files: ChangeLog.md
                    README.md

tested-with:            GHC == 8.4.4,
                        GHC == 8.6.5,
                        GHC == 8.8.4,
                        GHC == 8.10.7,
                        GHC == 9.0.2,
                        GHC == 9.2.8,
                        GHC == 9.4.8,
                        GHC == 9.6.5,
                        GHC == 9.8.2,
                        GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/obsidiansystems/dependent-map

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds
  exposed-modules:      Data.Dependent.Map,
                        Data.Dependent.Map.Lens,
                        Data.Dependent.Map.Internal
  other-modules:        Data.Dependent.Map.PtrEquality
  build-depends:        base >= 4.11 && < 5,
                        containers >= 0.5.7.1 && <0.8,
                        dependent-sum >= 0.6.1 && < 0.8,
                        constraints-extras >= 0.2.3.0 && < 0.5
