name:                   dependent-maps
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

source-repository head
  type:     darcs
  location: http://code.haskell.org/~mokus/dependent-maps

category:               Data, Dependent Types
synopsis:               \"Dependent maps\" (partial dependent products)
description:            \"Dependent maps\" (partial dependent products)

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Dependent.Map
  build-depends:        base >= 3 && < 5, containers, dependent-sum
