name:                   dependent-maps
version:                0.1
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Data, Dependent Types
synopsis:               \"Dependent maps\" (partial dependent products)
description:            \"Dependent maps\" (partial dependent products)

source-repository head
  type:     darcs
  location: http://code.haskell.org/~mokus/dependent-maps

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Dependent.Map, Data.Dependent.Map.Internal
  build-depends:        base >= 3 && < 5, containers, dependent-sum, prim-uniq
